Added new feature to scroll to plant in dictionary once classified

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,5 +90,6 @@
     <string name="dictionary">Dictionary</string>
     <string name="picture">Picture</string>
     <string name="you_found_a">You found a:</string>
+    <string name="see_in_dictionary">See in Dictionary</string>
 </resources>
 
